--- a/index.html
+++ b/index.html
@@ -3,34 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Miami's Hottest Rentals</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Anton&display=swap" rel="stylesheet">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
 </head>
 <body>
-    <section>
+    <section class="section-texto">
         <header>
             <nav>
-                <div class="left">
-                    <img class="img-logo" src="./img/logo.png" alt="">
-                    <h4>Nombre Empresa</h4>
-                </div>
-                <div class="right">
-                    <a href="">home</a>
-                    <a href="">login</a>
-                    <a href="">House</a>
-                    <a href="">Car</a>
-                    <a href="">Yacht</a>
-                </div>
+                <!-- <div class="navbar-logo">
+                    <img src="./img/logo.png" alt="">
+                </div> -->
+                <!-- <div class="name">
+                    <h4>Miami's Hottest Rentals</h4>
+                </div> -->
             </nav>
         </header>
         <div class="description">
+            <p>Miami’s <span>Hottest</span> Rentals</p>
             <h1>“La elegancia no es una cualidad externa, sino una parte del alma que es visible para los demás.” - Paulo Coelho</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis amet aliquam assumenda nisi illum. Modi vel at facilis nam ipsam aperiam, numquam nesciunt dicta! Minima velit vel quasi consequatur fugiat.lorem60</p>
         </div>
     </section>
 
 
     <main>
+        <div class="nav-bar-main">
+            <ul>
+                <!-- <a href="cars.html">Cars</a>
+                <a href="">Yachts</a>
+                <a href="">Jets</a>
+                <a href="">Villas</a> -->
+
+                <ul class="nav nav-bar-main">
+                    <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Cars</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="#">Yachts</a>
+                    </li>
+                    <li class="nav-item">
+                            <a class="nav-link" href="#">Jets</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Villas</a>
+                    </li>
+                </ul>
+            </ul>
+        </div>
+
+        <div class="left">
+            <h4></h4>
+        </div>
+
+        <div class="right">
+
+        </div>
+
+
 
     </main>
 
